<resources>
    <string name="app_name">BUNCIS</string>
    <string name="logo_description">Buncis App Logo</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_username">username</string>
    <string name="enter_password">password</string>
    <string name="user">User</string>

    <!--   InputDataActivity   -->
    <string name="biodata_kapal">Biodata Kapal</string>
    <string name="input">Input</string>
    <string name="nama_pelabuhan">Nama Pelabuhan</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="tanggal">Tanggal</string>
    <string name="bahan_bakar">Bahan Bakar</string>
    <string name="waktu">Waktu</string>
    <string name="timer">00 : 00</string>
    <string name="draft">Draft (m)</string>
    <string name="depan">Depan</string>
    <string name="tengah">Tengah</string>
    <string name="belakang">Belakang</string>
    <string name="next">Selanjutnya</string>

    <!--  CalculatorActivity  -->
    <string name="kalkulator">Input Sounding</string>
    <string name="nomor_tangki">Nomor Tanki:</string>
    <string name="trim">Trim (m)</string>
    <string name="zero">0.0</string>
    <string name="sounding">Sounding (mm)</string>
    <string name="sounding_">Sounding:</string>
    <string name="volume">Volume</string>
    <string name="hasil">Hasil</string>
    <string name="hitung">Hitung Volume</string>
    <string name="tambah">Tambah</string>


    <!--  Form ROB  -->
    <string name="nomor_surat">No. Surat</string>
    <string name="nama_kapal">Nama Kapal</string>
    <string name="kondisi_kapal">Kondisi Kapal</string>
    <string name="chief_engineer">Chief Engineer</string>
    <string name="master">Master</string>
    <string name="representative">Representative</string>
    <string name="company_name">PT Pertamina Trans Kontinental</string>
    <string name="company_address">Marketing Business &amp; Operation Region II\nJatimbalinus</string>
    <string name="rob_title">BUNKER REMAIN ON BOARD</string>
    <string name="rob_field">NAME OF VESSEL\n\nDATE\n\nTIME\n\nPORT\n\nGRADE OF BUNKER\n\nDRAFT</string>
    <string name="rob_draft">- Fore (F)\n\n- Middle (M)\n\n- Aft (A)</string>
    <string name="trim_n_nheel">TRIM\n\nHEEL</string>
    <string name="rob_titik_dua">: \n\n: \n\n: \n\n: \n\n: \n\n:</string>
    <string name="tv_fuel_tank">FUEL TANK</string>
    <string name="sounding_mm">SOUNDING (mm)</string>
    <string name="volume_liter">VOLUME (Liter)</string>
    <string name="tv_fuel_tank_name">Fuel Tank Name</string>
    <string name="total_rob_bunker">TOTAL ROB BUNKER</string>
    <string name="total_value_here">Total Value Here</string>
    <string name="download">download</string>
    <string name="filled_fuel_tank">Nomor Tangki Terisi:</string>
    <string name="created_by_buncis_2_0">Created by BUNCIS 2.0</string>

    <!--  Warning   -->
    <string name="warning_empty_data">%1s tidak boleh kosong!</string>
    <string name="empty_data">Data Kosong!</string>
    <string name="buncis">BUNCIS</string>
    <string name="sounding_check">Sounding</string>
    <string name="bunker_calculation_identification_system"><![CDATA[Bunker Calculation & Identification System]]></string>
    <string name="_000">000</string>
    <string name="m">m</string>

</resources>