<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.calculator.CalculatorActivity">

        <include
            android:id="@+id/lv_toolbar"
            layout="@layout/custom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/lv_form_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/lv_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/kalkulator"
                    android:textSize="18sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/sounding_check" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:hint="@string/nomor_tangki">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/ed_nomor_tangki"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:hint="@string/trim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_trim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="180dp"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sounding"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:visibility="gone"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_volume"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/volume"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_sounding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_sounding_1"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/zero"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_sounding_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/zero"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_sounding_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/zero"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_sounding_4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_sounding4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner_gray"
                            android:enabled="false"
                            android:hint="@string/zero"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_sounding5"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        app:boxBackgroundMode="outline"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_sounding_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corner_gray"
                            android:enabled="false"
                            android:hint="@string/zero"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="45dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/hitung" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginVertical="18dp"
                    android:background="@drawable/rounded_corner_gray"
                    android:hint="@string/hasil"
                    android:paddingVertical="12dp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_tambah"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"
                    android:text="@string/tambah" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_next"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/next" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_list_filled_fuel_tank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp"
            android:text="@string/filled_fuel_tank"
            app:layout_constraintTop_toBottomOf="@+id/lv_form_calculator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_tangki"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_filled_fuel_tank"
            tools:listitem="@layout/sounding_item" />

        <TextView
            android:id="@+id/tv_empty_data"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner_gray"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/empty_data"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_filled_fuel_tank" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>