<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.auth.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/mv_login_form"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mv_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.1"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textColorHint="@color/black_50"
                app:boxStrokeColor="@color/textfield_selector">

                <AutoCompleteTextView
                    android:id="@+id/ed_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="2"
                    android:drawableStart="@drawable/ic_account_24"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/black_50"
                    android:dropDownHeight="150dp"
                    android:hint="@string/enter_username"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="16dp"
                    android:scrollHorizontally="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomOutlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:textColorHint="@color/black_50"
                app:boxStrokeColor="@color/textfield_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_password_24"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black_50"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:scrollHorizontally="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:backgroundTint="@color/blue"
                android:focusable="true"
                android:text="@string/login" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>